--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,32 @@
 version: '3'
 services:
   nginx:
-    image: nginx:1.2.7
+    image: nginx
     container_name: nginx1
     ports: 
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    restart: "unless-stopped"
+      - ./nginx/nginx1.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx2.conf:/etc/nginx/nginx1.conf
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+      - ./keys/fullchain.pem:/etc/letsencrypt/live/app.fitsionary.com/fullchain.pem
+      - ./keys/privkey.pem:/etc/letsencrypt/live/app.fitsionary.com/privkey.pem
+    depends_on:
+      - node1
+    command : "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+  certbot:
+    image: certbot/certbot
+    container_name: certbot_service
+    volumes : 
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint : "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
   node1:
-    image: momspt_server:0.3.0
+    image: momspt_server:0.5.9
     container_name: node1
     expose:
-      - "3000"
+      - '3000'
     volumes:
       - ./momspt_server:/app
-    restart: "unless-stopped"
