--- a/momspt_server/package.json
+++ b/momspt_server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "form-data": "^4.0.0",
     "http-errors": "~1.6.3",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
