테스트 영상 촬영

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,7 @@ http {
     server {
         listen 80;
         server_name nodetest;
+		client_max_body_size 20M;
         location / {
             proxy_pass         http://node1:3000;
             proxy_redirect     off;
