--- a/nginx/nginx2.conf
+++ b/nginx/nginx2.conf
@@ -22,6 +22,7 @@ http {
 	server {
 		listen 80;
 		server_name nodetest;
+		client_max_body_size 20M;
 		location / {
 #			proxy_pass http://momspt/;
 #			proxy_redirect     off;
@@ -35,7 +36,7 @@ http {
 	server {
 		listen 443 ssl;
 		server_name localhost;
-	
+		client_max_body_size 20M;
 		location /{
 			proxy_pass http://momspt;
 		}
