--- a/momspt_server/package.json
+++ b/momspt_server/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
