[Merge]master와 merge

--- a/momspt_server/Dockerfile
+++ b/momspt_server/Dockerfile
@@ -5,6 +5,7 @@ RUN npm install -g -y npm@8.1.2
 RUN npm install
 RUN npm install -y pg
 RUN npm install -y form-data
+RUN npm install -y cors
 RUN npm install -y pg-hstore
 RUN npm install -y -g sequelize-cli
 COPY . ./
